# ros2

./: frames_2025-03-14_09.47.50.gv  full.sh  getting_single_file.txt  my_robot.urdf
cart_src/cart_control/: package.xml  setup.py
cart_src/cart_control/cart_control/: apply_force_to_body.py  mpc.py
cart_src/cart_description/: package.xml
cart_src/cart_description/config/: my_controllers.yaml
cart_src/cart_description/urdf/: invpend.urdf.xacro  invpend_gazebo.xacro  new.urdf  ros2_control.xacro
cart_src/cart_display/: package.xml
cart_src/cart_display/launch/: cart_display.launch.py  cart_display.launch.xml
cart_src/cart_display/rviz/: real.rviz
install/: local_setup.sh  setup.sh
log/: latest_build
src/cart_control/: package.xml  setup.py
src/cart_control/cart_control/: force.py  get_angle.py  github.py  mpc.py  test.py  timer.py
src/cart_description/: CMakeLists.txt  package.xml
src/cart_description/config/: my_controllers.yaml
src/cart_description/urdf/: invpend.urdf.xacro  new.urdf  ros2_control.xacro
src/cart_display/: CMakeLists.txt
src/cart_display/launch/: cart_display.launch.py  testing.launch.py
src/cart_display/worlds/: invpend.world
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/matrix_mpc/: package.xml  setup.cfg  setup.py
src/matrix_mpc/matrix_mpc/: final_mpc.ipynb  matrix_mpc.py  my_mpc.py
src/mpc_control/: package.xml  setup.py
src/mpc_control/mpc_control/: controller.py  demo.py  final.py  final_mpc.ipynb  seek.py  test.py  time.py
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: first_cpp_node.cpp  oop_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: battery_node.py  led_panel.py  my_first_node.py  number_publisher.py  oop_first_node.py  robot_news_station.py  smartphone.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
(+130 files in other folders)
