<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cart_display</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abhilashhari1313@gmail.com">abhilash-ts434</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>cart_description</depend>
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>
  <depend>ros2_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
